agrego nuevo estilo

--- a/css/style.css
+++ b/css/style.css
@@ -144,617 +144,17 @@ main #s_experience {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   background-color: black;
 }
-main #s_experience img {
+main #s_experience div div div img {
   position: relative;
   z-index: 2;
-  -webkit-animation-timing-function: linear;
-          animation-timing-function: linear;
-}
-main #s_experience #html-css-js {
-  margin: 5px;
-  -webkit-animation-name: animacionhtml-css-js;
-          animation-name: animacionhtml-css-js;
-  position: relative;
-  -webkit-animation-duration: 20s;
-          animation-duration: 20s;
-  -webkit-animation-iteration-count: infinite;
-          animation-iteration-count: infinite;
-}
-@-webkit-keyframes animacionhtml-css-js {
-  0% {
-    left: 0;
-    top: 0px;
-  }
-  25% {
-    left: 0;
-    top: 40%;
-  }
-  50% {
-    left: 0;
-    top: 80%;
-  }
-  100% {
-    left: 0;
-    top: 0px;
-  }
-}
-@keyframes animacionhtml-css-js {
-  0% {
-    left: 0;
-    top: 0px;
-  }
-  25% {
-    left: 0;
-    top: 40%;
-  }
-  50% {
-    left: 0;
-    top: 80%;
-  }
-  100% {
-    left: 0;
-    top: 0px;
-  }
-}
-main #s_experience #angularjs {
-  margin: 5px;
-  -webkit-animation-name: animacionangularjs;
-          animation-name: animacionangularjs;
-  position: relative;
-  -webkit-animation-duration: 19s;
-          animation-duration: 19s;
-  -webkit-animation-iteration-count: infinite;
-          animation-iteration-count: infinite;
-}
-@-webkit-keyframes animacionangularjs {
-  0% {
-    left: 0;
-    top: 0px;
-  }
-  25% {
-    left: 0;
-    top: 40%;
-  }
-  50% {
-    left: 0;
-    top: 80%;
-  }
-  100% {
-    left: 0;
-    top: 0px;
-  }
-}
-@keyframes animacionangularjs {
-  0% {
-    left: 0;
-    top: 0px;
-  }
-  25% {
-    left: 0;
-    top: 40%;
-  }
-  50% {
-    left: 0;
-    top: 80%;
-  }
-  100% {
-    left: 0;
-    top: 0px;
-  }
-}
-main #s_experience #bootstrap {
-  margin: 5px;
-  -webkit-animation-name: animacionbootstrap;
-          animation-name: animacionbootstrap;
-  position: relative;
-  -webkit-animation-duration: 18s;
-          animation-duration: 18s;
-  -webkit-animation-iteration-count: infinite;
-          animation-iteration-count: infinite;
-}
-@-webkit-keyframes animacionbootstrap {
-  0% {
-    left: 0;
-    top: 0px;
-  }
-  25% {
-    left: 0;
-    top: 40%;
-  }
-  50% {
-    left: 0;
-    top: 80%;
-  }
-  100% {
-    left: 0;
-    top: 0px;
-  }
-}
-@keyframes animacionbootstrap {
-  0% {
-    left: 0;
-    top: 0px;
-  }
-  25% {
-    left: 0;
-    top: 40%;
-  }
-  50% {
-    left: 0;
-    top: 80%;
-  }
-  100% {
-    left: 0;
-    top: 0px;
-  }
-}
-main #s_experience #ceo {
-  margin: 5px;
-  -webkit-animation-name: animacionceo;
-          animation-name: animacionceo;
-  position: relative;
-  -webkit-animation-duration: 17s;
-          animation-duration: 17s;
-  -webkit-animation-iteration-count: infinite;
-          animation-iteration-count: infinite;
-}
-@-webkit-keyframes animacionceo {
-  0% {
-    left: 0;
-    top: 0px;
-  }
-  25% {
-    left: 0;
-    top: 40%;
-  }
-  50% {
-    left: 0;
-    top: 80%;
-  }
-  100% {
-    left: 0;
-    top: 0px;
-  }
-}
-@keyframes animacionceo {
-  0% {
-    left: 0;
-    top: 0px;
-  }
-  25% {
-    left: 0;
-    top: 40%;
-  }
-  50% {
-    left: 0;
-    top: 80%;
-  }
-  100% {
-    left: 0;
-    top: 0px;
-  }
-}
-main #s_experience #figma {
-  margin: 5px;
-  -webkit-animation-name: animacionfigma;
-          animation-name: animacionfigma;
-  position: relative;
-  -webkit-animation-duration: 16s;
-          animation-duration: 16s;
-  -webkit-animation-iteration-count: infinite;
-          animation-iteration-count: infinite;
-}
-@-webkit-keyframes animacionfigma {
-  0% {
-    left: 0;
-    top: 0px;
-  }
-  25% {
-    left: 0;
-    top: 40%;
-  }
-  50% {
-    left: 0;
-    top: 80%;
-  }
-  100% {
-    left: 0;
-    top: 0px;
-  }
-}
-@keyframes animacionfigma {
-  0% {
-    left: 0;
-    top: 0px;
-  }
-  25% {
-    left: 0;
-    top: 40%;
-  }
-  50% {
-    left: 0;
-    top: 80%;
-  }
-  100% {
-    left: 0;
-    top: 0px;
-  }
-}
-main #s_experience #github {
-  margin: 5px;
-  -webkit-animation-name: animaciongithub;
-          animation-name: animaciongithub;
-  position: relative;
-  -webkit-animation-duration: 15s;
-          animation-duration: 15s;
-  -webkit-animation-iteration-count: infinite;
-          animation-iteration-count: infinite;
-}
-@-webkit-keyframes animaciongithub {
-  0% {
-    left: 0;
-    top: 0px;
-  }
-  25% {
-    left: 0;
-    top: 40%;
-  }
-  50% {
-    left: 0;
-    top: 80%;
-  }
-  100% {
-    left: 0;
-    top: 0px;
-  }
-}
-@keyframes animaciongithub {
-  0% {
-    left: 0;
-    top: 0px;
-  }
-  25% {
-    left: 0;
-    top: 40%;
-  }
-  50% {
-    left: 0;
-    top: 80%;
-  }
-  100% {
-    left: 0;
-    top: 0px;
-  }
-}
-main #s_experience #jquery {
-  margin: 5px;
-  -webkit-animation-name: animacionjquery;
-          animation-name: animacionjquery;
-  position: relative;
-  -webkit-animation-duration: 14s;
-          animation-duration: 14s;
-  -webkit-animation-iteration-count: infinite;
-          animation-iteration-count: infinite;
-}
-@-webkit-keyframes animacionjquery {
-  0% {
-    left: 0;
-    top: 0px;
-  }
-  25% {
-    left: 0;
-    top: 40%;
-  }
-  50% {
-    left: 0;
-    top: 80%;
-  }
-  100% {
-    left: 0;
-    top: 0px;
-  }
-}
-@keyframes animacionjquery {
-  0% {
-    left: 0;
-    top: 0px;
-  }
-  25% {
-    left: 0;
-    top: 40%;
-  }
-  50% {
-    left: 0;
-    top: 80%;
-  }
-  100% {
-    left: 0;
-    top: 0px;
-  }
-}
-main #s_experience #nodejs {
-  margin: 5px;
-  -webkit-animation-name: animacionnodejs;
-          animation-name: animacionnodejs;
-  position: relative;
-  -webkit-animation-duration: 15s;
-          animation-duration: 15s;
-  -webkit-animation-iteration-count: infinite;
-          animation-iteration-count: infinite;
-}
-@-webkit-keyframes animacionnodejs {
-  0% {
-    left: 0;
-    top: 0px;
-  }
-  25% {
-    left: 0;
-    top: 40%;
-  }
-  50% {
-    left: 0;
-    top: 80%;
-  }
-  100% {
-    left: 0;
-    top: 0px;
-  }
-}
-@keyframes animacionnodejs {
-  0% {
-    left: 0;
-    top: 0px;
-  }
-  25% {
-    left: 0;
-    top: 40%;
-  }
-  50% {
-    left: 0;
-    top: 80%;
-  }
-  100% {
-    left: 0;
-    top: 0px;
-  }
-}
-main #s_experience #php {
-  margin: 5px;
-  -webkit-animation-name: animacionphp;
-          animation-name: animacionphp;
-  position: relative;
-  -webkit-animation-duration: 16s;
-          animation-duration: 16s;
-  -webkit-animation-iteration-count: infinite;
-          animation-iteration-count: infinite;
-}
-@-webkit-keyframes animacionphp {
-  0% {
-    left: 0;
-    top: 0px;
-  }
-  25% {
-    left: 0;
-    top: 40%;
-  }
-  50% {
-    left: 0;
-    top: 80%;
-  }
-  100% {
-    left: 0;
-    top: 0px;
-  }
-}
-@keyframes animacionphp {
-  0% {
-    left: 0;
-    top: 0px;
-  }
-  25% {
-    left: 0;
-    top: 40%;
-  }
-  50% {
-    left: 0;
-    top: 80%;
-  }
-  100% {
-    left: 0;
-    top: 0px;
-  }
-}
-main #s_experience #python {
-  margin: 5px;
-  -webkit-animation-name: animacionpython;
-          animation-name: animacionpython;
-  position: relative;
-  -webkit-animation-duration: 17s;
-          animation-duration: 17s;
-  -webkit-animation-iteration-count: infinite;
-          animation-iteration-count: infinite;
-}
-@-webkit-keyframes animacionpython {
-  0% {
-    left: 0;
-    top: 0px;
-  }
-  25% {
-    left: 0;
-    top: 40%;
-  }
-  50% {
-    left: 0;
-    top: 80%;
-  }
-  100% {
-    left: 0;
-    top: 0px;
-  }
-}
-@keyframes animacionpython {
-  0% {
-    left: 0;
-    top: 0px;
-  }
-  25% {
-    left: 0;
-    top: 40%;
-  }
-  50% {
-    left: 0;
-    top: 80%;
-  }
-  100% {
-    left: 0;
-    top: 0px;
-  }
-}
-main #s_experience #reactjs {
-  margin: 5px;
-  -webkit-animation-name: animacionreactjs;
-          animation-name: animacionreactjs;
-  position: relative;
-  -webkit-animation-duration: 18s;
-          animation-duration: 18s;
-  -webkit-animation-iteration-count: infinite;
-          animation-iteration-count: infinite;
-}
-@-webkit-keyframes animacionreactjs {
-  0% {
-    left: 0;
-    top: 0px;
-  }
-  25% {
-    left: 0;
-    top: 40%;
-  }
-  50% {
-    left: 0;
-    top: 80%;
-  }
-  100% {
-    left: 0;
-    top: 0px;
-  }
-}
-@keyframes animacionreactjs {
-  0% {
-    left: 0;
-    top: 0px;
-  }
-  25% {
-    left: 0;
-    top: 40%;
-  }
-  50% {
-    left: 0;
-    top: 80%;
-  }
-  100% {
-    left: 0;
-    top: 0px;
-  }
-}
-main #s_experience #sass {
-  margin: 5px;
-  -webkit-animation-name: animacionsass;
-          animation-name: animacionsass;
-  position: relative;
-  -webkit-animation-duration: 19s;
-          animation-duration: 19s;
-  -webkit-animation-iteration-count: infinite;
-          animation-iteration-count: infinite;
-}
-@-webkit-keyframes animacionsass {
-  0% {
-    left: 0;
-    top: 0px;
-  }
-  25% {
-    left: 0;
-    top: 40%;
-  }
-  50% {
-    left: 0;
-    top: 80%;
-  }
-  100% {
-    left: 0;
-    top: 0px;
-  }
-}
-@keyframes animacionsass {
-  0% {
-    left: 0;
-    top: 0px;
-  }
-  25% {
-    left: 0;
-    top: 40%;
-  }
-  50% {
-    left: 0;
-    top: 80%;
-  }
-  100% {
-    left: 0;
-    top: 0px;
-  }
-}
-main #s_experience #uiux {
-  margin: 5px;
-  -webkit-animation-name: animacionuiux;
-          animation-name: animacionuiux;
-  position: relative;
-  -webkit-animation-duration: 20s;
-          animation-duration: 20s;
-  -webkit-animation-iteration-count: infinite;
-          animation-iteration-count: infinite;
-}
-@-webkit-keyframes animacionuiux {
-  0% {
-    left: 0;
-    top: 0px;
-  }
-  25% {
-    left: 0;
-    top: 40%;
-  }
-  50% {
-    left: 0;
-    top: 80%;
-  }
-  100% {
-    left: 0;
-    top: 0px;
-  }
-}
-@keyframes animacionuiux {
-  0% {
-    left: 0;
-    top: 0px;
-  }
-  25% {
-    left: 0;
-    top: 40%;
-  }
-  50% {
-    left: 0;
-    top: 80%;
-  }
-  100% {
-    left: 0;
-    top: 0px;
-  }
 }
 main #s_experience .humovideo {
   position: absolute;
@@ -940,11 +340,7 @@ body::-webkit-scrollbar-thumb:hover {
     height: 30vh;
   }
   main #s_experience img {
-    height: 12px;
-  }
-  main #projects {
-    height: 20vh;
-    font-size: 20px;
+    height: 100px;
   }
   main #contacto #form {
     width: 100%;
@@ -1069,7 +465,7 @@ body::-webkit-scrollbar-thumb:hover {
     height: 30vh;
   }
   main #s_experience img {
-    height: 35px;
+    height: 150px;
   }
   main #projects {
     height: 20vh;
@@ -1186,16 +582,13 @@ body::-webkit-scrollbar-thumb:hover {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: baseline;
-        -ms-flex-align: baseline;
-            align-items: baseline;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     background-color: black;
-  }
-  main #s_experience img {
-    height: 50px;
   }
   main #projects {
     height: 30vh;
