--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -90,184 +90,21 @@ main{
     #s_experience{
         height: 70vh;
         display: flex;
-        align-items: baseline;
         justify-content: center;
+        align-items: center;
         background-color: black;
-// LOGOS EN MOVIMIENTO
-        img{
-            position: relative;
-            z-index: 2;
-            animation-timing-function: linear;
+        div{
+            div{
+                div{
+                    img{
+                        position: relative;
+                        z-index: 2;
+                    }
+
+                }
+            }
         }
-        #html-css-js{
-            margin: 5px;
-            animation-name: animacionhtml-css-js;
-            position: relative;
-            animation-duration: 20s;
-            animation-iteration-count: infinite;
-        }
-        @keyframes animacionhtml-css-js{
-            0%{left: 0; top: 0px;}
-            25%{left: 0; top: 40%;}
-            50%{left: 0; top: 80%;}
-            100%{left: 0; top:0px;}
-        }
-        #angularjs{
-            margin: 5px;
-            animation-name: animacionangularjs;
-            position: relative;
-            animation-duration: 19s;
-            animation-iteration-count: infinite;
-        }
-        @keyframes animacionangularjs{
-            0%{left: 0; top: 0px;}
-            25%{left: 0; top: 40%;}
-            50%{left: 0; top: 80%;}
-            100%{left: 0; top:0px;}
-        }
-        #bootstrap{
-            margin: 5px;
-            animation-name: animacionbootstrap;
-            position: relative;
-            animation-duration: 18s;
-            animation-iteration-count: infinite;
-        }
-        @keyframes animacionbootstrap{
-            0%{left: 0; top: 0px;}
-            25%{left: 0; top: 40%;}
-            50%{left: 0; top: 80%;}
-            100%{left: 0; top:0px;}
-        }
-        #ceo{
-            margin: 5px;
-            animation-name: animacionceo;
-            position: relative;
-            animation-duration: 17s;
-            animation-iteration-count: infinite;
-        }
-        @keyframes animacionceo{
-            0%{left: 0; top: 0px;}
-            25%{left: 0; top: 40%;}
-            50%{left: 0; top: 80%;}
-            100%{left: 0; top:0px;}
-        }
-        #figma{
-            margin: 5px;
-            animation-name: animacionfigma;
-            position: relative;
-            animation-duration: 16s;
-            animation-iteration-count: infinite;
-        }
-        @keyframes animacionfigma{
-            0%{left: 0; top: 0px;}
-            25%{left: 0; top: 40%;}
-            50%{left: 0; top: 80%;}
-            100%{left: 0; top:0px;}
-        }
-        #github{
-            margin: 5px;
-            animation-name: animaciongithub;
-            position: relative;
-            animation-duration: 15s;
-            animation-iteration-count: infinite;
-        }
-        @keyframes animaciongithub{
-            0%{left: 0; top: 0px;}
-            25%{left: 0; top: 40%;}
-            50%{left: 0; top: 80%;}
-            100%{left: 0; top:0px;}
-        }
-        #jquery{
-            margin: 5px;
-            animation-name: animacionjquery;
-            position: relative;
-            animation-duration: 14s;
-            animation-iteration-count: infinite;
-        }
-        @keyframes animacionjquery{
-            0%{left: 0; top: 0px;}
-            25%{left: 0; top: 40%;}
-            50%{left: 0; top: 80%;}
-            100%{left: 0; top:0px;}
-        }
-        #nodejs{
-            margin: 5px;
-            animation-name: animacionnodejs;
-            position: relative;
-            animation-duration: 15s;
-            animation-iteration-count: infinite;
-        }
-        @keyframes animacionnodejs{
-            0%{left: 0; top: 0px;}
-            25%{left: 0; top: 40%;}
-            50%{left: 0; top: 80%;}
-            100%{left: 0; top:0px;}
-        }
-        #php{
-            margin: 5px;
-            animation-name: animacionphp;
-            position: relative;
-            animation-duration: 16s;
-            animation-iteration-count: infinite;
-        }
-        @keyframes animacionphp{
-            0%{left: 0; top: 0px;}
-            25%{left: 0; top: 40%;}
-            50%{left: 0; top: 80%;}
-            100%{left: 0; top:0px;}
-        }
-        #python{
-            margin: 5px;
-            animation-name: animacionpython;
-            position: relative;
-            animation-duration: 17s;
-            animation-iteration-count: infinite;
-        }
-        @keyframes animacionpython{
-            0%{left: 0; top: 0px;}
-            25%{left: 0; top: 40%;}
-            50%{left: 0; top: 80%;}
-            100%{left: 0; top:0px;}
-        }
-        #reactjs{
-            margin: 5px;
-            animation-name: animacionreactjs;
-            position: relative;
-            animation-duration: 18s;
-            animation-iteration-count: infinite;
-        }
-        @keyframes animacionreactjs{
-            0%{left: 0; top: 0px;}
-            25%{left: 0; top: 40%;}
-            50%{left: 0; top: 80%;}
-            100%{left: 0; top:0px;}
-        }
-        #sass{
-            margin: 5px;
-            animation-name: animacionsass;
-            position: relative;
-            animation-duration: 19s;
-            animation-iteration-count: infinite;
-        }
-        @keyframes animacionsass{
-            0%{left: 0; top: 0px;}
-            25%{left: 0; top: 40%;}
-            50%{left: 0; top: 80%;}
-            100%{left: 0; top:0px;}
-        }
-        #uiux{
-            margin: 5px;
-            animation-name: animacionuiux;
-            position: relative;
-            animation-duration: 20s;
-            animation-iteration-count: infinite;
-        }
-        @keyframes animacionuiux{
-            0%{left: 0; top: 0px;}
-            25%{left: 0; top: 40%;}
-            50%{left: 0; top: 80%;}
-            100%{left: 0; top:0px;}
-        }
+            
         .humovideo{
             position: absolute;
             top: 0;
@@ -276,6 +113,7 @@ main{
             height: 100%;
             object-fit: cover;
         }
+           
     }
 
 
