--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,4 +1,36 @@
 footer{
-    height: 20vh;
-    background-color: black;
+
+    background-image: radial-gradient(circle, #4df0ff, #4cf0ff, #4bf0ff, #4af0ff, #49f0ff, #51f1ff, #59f1ff, #60f2ff, #6ff3ff, #7cf4ff, #88f5ff, #93f6ff);
+    display: flex;
+    font-family: 'Lobster', cursive;
+    div{
+        width: 30%;
+        text-align: center;
+        
+        #p_footer{
+            color: #000000;  
+        }
+        a{
+            display: list-item;
+            list-style-type: none;
+            color: #000000;
+        }
+    }
+    #s_section{
+        text-align: center;
+        width: 40%;
+        a{
+            img{
+                height: 40px;
+            }
+        }
+    }
+    #f_contacto{
+        text-align: center;
+        a{
+            img{
+                height: 40px;
+            }
+        }
+    }
 }
