--- a/scss/_mediaquerys.scss
+++ b/scss/_mediaquerys.scss
@@ -56,27 +56,48 @@
         #contacto{
             #form{
                 width: 100%;
-                height: 120vh;
+                height: 100vh;
                 #contact{
                     font-size: 30px;
-
                 }
                 #p_contact{
                     font-size: 15px;
                     text-align: justify;
-                }
-                
+                }  
             }
             #mapa{
                 width: 100%;
-                height: 80vh;
+                height: 50vh;
                 iframe{
-                    width: 100%;
-                    height: 100%;
+
                     
                 }
             }
         }  
+    }
+    footer{
+        div{
+            #p_footer{
+                font-size: 10px;
+            }
+            a{
+                font-size: 10px;
+            }
+        }
+        #s_section{
+            a{
+                img{
+                    height: 25px;
+                }
+            }
+        }
+        #f_contacto{
+            a{
+                img{
+                    height: 25px;
+                }
+            }
+        }
     }
 }
 @media(min-width: 480px) and (max-width: 767px){
